AFS_Dev/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>OSP</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>1A</fullName>
        </values>
        <values>
            <fullName>1B</fullName>
        </values>
        <values>
            <fullName>2A</fullName>
        </values>
        <values>
            <fullName>2B</fullName>
        </values>
        <values>
            <fullName>3</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Opportunity Master</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0</fullName>
        </values>
        <values>
            <fullName>1A</fullName>
        </values>
        <values>
            <fullName>1B</fullName>
        </values>
        <values>
            <fullName>2A</fullName>
        </values>
        <values>
            <fullName>2B</fullName>
        </values>
        <values>
            <fullName>3</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AFS_High_Priority_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It&apos;s the record the Sales Team keep to track capture/deal shaper coverage on key deals. This is a new admin-only field to capture.</description>
        <inlineHelpText>It&apos;s the record the Sales Team keep to track capture/deal shaper coverage on key deals.</inlineHelpText>
        <label>AFS High Priority Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ATS_Notes__c</fullName>
        <inlineHelpText>Provide an introduction to ATS request. Provide explanation of below-target OI%, summarize any management discounts and/or costs assumed to be not billable, DSO, etc. For Agilex legacy deals, please specify new ODE.</inlineHelpText>
        <label>ATS Introduction</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_OI_Plan_Be_Met__c</fullName>
        <description>Can Account OI plan be met with this deal and other opportunities in the account pipeline?</description>
        <inlineHelpText>Can Account Plan OI% be Met with this deal and other opportunities in the account pipeline?</inlineHelpText>
        <label>Can Account Plan OI% Be Met?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Plan_OI__c</fullName>
        <label>Account Plan OI%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Actual_Contract_Sign_Date_Quater__c</fullName>
        <label>Actual Contract Sign Date Quater</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Contract_Sign_Date__c</fullName>
        <inlineHelpText>Date the contract was signed by the client. Date field must always be after the Draft RFP Release Date, RFP Release Date, Proposal Submission Date, but may equal to the Expected Contract Sign Date.</inlineHelpText>
        <label>Actual Contract Sign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allowable_ID__c</fullName>
        <inlineHelpText>The Allowable ID for this opportunity to be edited by Project Accounting Users.</inlineHelpText>
        <label>Allowable ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Status_Stage__c</fullName>
        <inlineHelpText>Status/Stage the Sales Ops will approve the opportunity record to once the opportunity has gone through all approval processes</inlineHelpText>
        <label>Approved Status/Stage</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Withdrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS Withdrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Guarantee_Letter_of_Credit__c</fullName>
        <inlineHelpText>Y/N field to indicate if a Bank Gurantee/Letter of Credit is required. If the value &quot;Yes&quot; is selected, attach the Corporate Bank Guarantee Request Form

Applies to Opp Type:
Competitive
Re-compete
On-Contract Growth
Extension

Excludes: Option</inlineHelpText>
        <label>Bank Guarantee/Letter of Credit?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_Probable_Worst__c</fullName>
        <inlineHelpText>The scenario for AFS winning the deal. 
Worst Case: AFS would win in the worst case scenario. 
Probable Win: A win is likely. 
Probable Loss: A win is unlikely. 
Best Case: We would only win in the best case scenario. 
Exclude: Exclude from forecast.</inlineHelpText>
        <label>Best/Probable/Worst</label>
        <picklist>
            <picklistValues>
                <fullName>Exclude</fullName>
                <color>#DDDDDD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Best</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Possible Loss</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Probable Win</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>Worst</fullName>
                <color>#78C953</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Black_Hat_Review__c</fullName>
        <inlineHelpText>Optional field that is tracked in the Time Over Target (TOT) file that is used to track Top Opps and AFS High Priority Deals. Field generally completed by Leadership; leave field blank if date unknown.</inlineHelpText>
        <label>Black Hat Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Blended_Target_OI__c</fullName>
        <inlineHelpText>This formula field is a blended target OI% based on service group OI values and target OI%.</inlineHelpText>
        <label>Blended Target OI%</label>
        <summarizedField>Financial_Summary__c.Target_Percentage__c</summarizedField>
        <summaryFilterItems>
            <field>Financial_Summary__c.Financial_Summary_Type__c</field>
            <operation>contains</operation>
            <value>&apos;Total&apos;</value>
        </summaryFilterItems>
        <summaryForeignKey>Financial_Summary__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Capture_Status__c</fullName>
        <inlineHelpText>&apos;This field is used to capture the Capture Status as designated by the AFS Sales Team and is an admin only field. The Capture Status is designated when relevant opportunities are reviewed w/  Michael Fox and identifies the health of the opportunity</inlineHelpText>
        <label>Capture Status</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Account_Lead_formula__c</fullName>
        <formula>Account.Client_Account_Lead__r.FirstName  &amp; &quot; &quot; &amp;  Account.Client_Account_Lead__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Account Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Classification__c</fullName>
        <formula>TEXT(Account.Client_Classification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Data_Protection_Risk_Assessment__c</fullName>
        <inlineHelpText>Indicates if opportunity team has reviewed and completed Data Protection Checklist. 

No is not an acceptable answer. Please review the checklist link in the Custom Links section and adjust response to Yes.</inlineHelpText>
        <label>Client Data Protection Risk Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Industry_Area_of_Service__c</fullName>
        <inlineHelpText>The client operates in, is involved in, or provides services/deliverable&apos;s for one of the following industries (check all that apply).</inlineHelpText>
        <label>Client Industry/Area of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Aerospace &amp; Defense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Services/Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customs, Border &amp; Identity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Police (includes public safety)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear Power</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am not sure, please contact me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None Apply</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Client_QA_Director__c</fullName>
        <formula>Account.Client_QA_Director__r.FirstName  &amp; &quot; &quot; &amp;  Account.Client_QA_Director__r.LastName</formula>
        <label>Client QA Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Rate__c</fullName>
        <formula>IF (ISPICKVAL(Reporting_Status__c, &apos;Won&apos;) , Total_Current_Revenue__c ,
IF (ISPICKVAL(Reporting_Status__c, &apos;Lost&apos;) ,Total_Current_Revenue__c,
IF (ISPICKVAL(Reporting_Status__c, &apos;AFS Withdrew&apos;) ,Total_Current_Revenue__c,
IF (ISPICKVAL(Reporting_Status__c, &apos;Client Withdrew&apos;) ,Total_Current_Revenue__c,
0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Color_Team_Review_Date__c</fullName>
        <inlineHelpText>Optional field that is tracked in the Time Over Target (TOT) file that is used to track Top Opps and AFS High Priority Deals. Field generally completed by Leadership; leave field blank if date unknown.</inlineHelpText>
        <label>Color Team Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Color_Team_Review__c</fullName>
        <inlineHelpText>Optional field that is tracked in the Time Over Target (TOT) file that is used to track Top Opps and AFS High Priority Deals. Field generally completed by Leadership; leave field blank if date unknown.</inlineHelpText>
        <label>Color Team Review</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complexity_Category__c</fullName>
        <inlineHelpText>Indicates which of the AFS Complexity Criteria options are applicable to the opportunity.</inlineHelpText>
        <label>Complexity Category</label>
        <picklist>
            <picklistValues>
                <fullName>ATSLP: Req&apos;t to lease/acquire facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATSLP: SW license chg/SW assets provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATSLP: Transfer/sale/leasing of assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapCo: CapCo deal reneg/extension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapCo: No longer requires CapCo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapCo: Referred to CapCo by ELT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB: Cross border client contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CB: Geographic expansion/high risk area</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC: Capital &lt;$1M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC: Capital &gt;=$10M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC: Capital &gt;=$1M to &lt;$10M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JVMA: Assisting w/ Client M&amp;A activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JVMA: Jt Venture/Investment/Divestiture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JVMA: M&amp;A transaction &lt;$1M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JVMA: M&amp;A transaction &gt;=$10M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JVMA: M&amp;A transaction &gt;=$1M and &lt;$10M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal: Deal funded by/related to USARRA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal: Deal funded by US Federal govt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal: Deviations from Policy AFS-1370</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal: Regulatory approval required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA: Opp Director confirms not applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSFS: Bank Guarantee/LoC &lt;$10M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSFS: Corp Guarantee/Pol 45 disclosure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSFS: Risk of negative media attention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSFS: Royalties, mktg assitance, etc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSFS: Sales incentives &lt;$10M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NSFS: Surety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONSC: Defense related opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONSC: Expanded Scope of Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ONSC: Sole Source Contract</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Complexity_Description__c</fullName>
        <inlineHelpText>Indicates which of the AFS Complexity Criteria options are applicable to the opportunity.</inlineHelpText>
        <label>Complexity Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consulting_End__c</fullName>
        <inlineHelpText>Start/End Dates should reflect the base award/booked sale represented by the Total Current Revenue</inlineHelpText>
        <label>Consulting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consulting_Start__c</fullName>
        <inlineHelpText>Date the Consulting portion of the contract is expected to begin. Field is required if the Financial Details Related List includes MC, SI, or TC Service Groups.</inlineHelpText>
        <label>Consulting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consulting_Total_Revenue__c</fullName>
        <label>Consulting Total Revenue</label>
        <summarizedField>OpportunityLineItem.Revenue__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Type_of_Work__c</field>
            <operation>contains</operation>
            <value>Consulting</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Contract_Vehicle__c</fullName>
        <label>Contract Vehicle</label>
        <picklist>
            <picklistValues>
                <fullName>Alliant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATRRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CATS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDC CIMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Census Digital Transformation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Census Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Census SE&amp;I Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Census SE&amp;I Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Census SE&amp;I Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFPB MC BPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Census UTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIOSP3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS EBPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMS VDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept of Education EDSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept of Education FSA Ombudsman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dept of Energy NNSA TEPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHS EAGLE II, FC1-Unrestricted (AFS &amp; ASMR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHS TTAC TIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLA EBS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLA RDSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOE/NNSA TEPS (CTA member)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoJ CDCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoJ ITSS-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoJ JMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoS DME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DoS ILMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSCA SCES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FBI HRSource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FBI IT TRIPLE S</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_of_Contract_Management_Review_Date__c</fullName>
        <label>Contract Management Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Opportunity_QA_Review_2B__c</fullName>
        <inlineHelpText>This field is required based on revenue thresholds/logic and when the user has completed the QA Review while advancing to stage 2B.</inlineHelpText>
        <label>Date of Opportunity QA Review 2B</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Opportunity_QA_Review_3__c</fullName>
        <inlineHelpText>This field is required based on revenue thresholds/logic and when the user has completed the QA Review while advancing to stage 3.</inlineHelpText>
        <label>Date of Opportunity QA Review 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Centers__c</fullName>
        <inlineHelpText>Indicate which, if any, Delivery Centers will be involved in contract delivery.</inlineHelpText>
        <label>Delivery Centers</label>
        <picklist>
            <picklistValues>
                <fullName>India - Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - Kolkata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India - Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines - Cebu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines - Manila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Atlanta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Cayuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Cincinnati  (DC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Cincinnati  (IO)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Houston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Murray Hill (SSC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AFS - San Antonio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Tampa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Wilmington</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA - Austin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDN - Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Draft_RFP_Release_Date__c</fullName>
        <inlineHelpText>Anticipated release date of the Draft RFP. This date field may be equal to or before the &quot;RFP Release&quot; date field.</inlineHelpText>
        <label>Draft RFP Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimate_Not_Confirm_Compliance__c</fullName>
        <inlineHelpText>If the estimator indicated non-compliance with policy AFS-0011 (user answered &quot;No&quot; to the field above), then this field is required to document the exception.</inlineHelpText>
        <label>Explain ADM Non-Compliance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimator_Confirm_Compliance__c</fullName>
        <inlineHelpText>Estimator to confirm compliance with Policy AFS-0011 (Use of Accenture Delivery Methods). If the response equals &quot;No&quot;, user must document exception. This field is used to confirm audit findings against two separate AFS policies</inlineHelpText>
        <label>ADM Compliant?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Contract_Sign_Date_Quarter__c</fullName>
        <formula>&apos;FY&apos; 
+

RIGHT(TEXT(
IF(MONTH(CloseDate) &gt;=9,
YEAR(CloseDate) + 1,
YEAR(CloseDate)
)),2) 
+
&quot;-&quot; 
+
CASE(
    MONTH(CloseDate),

    9,&apos;Q1&apos;, 
    10,&apos;Q1&apos;, 
    11,&apos;Q1&apos;, 
    12,&apos;Q2&apos;, 
    1,&apos;Q2&apos;, 
    2,&apos;Q2&apos;, 
    3,&apos;Q3&apos;, 
    4,&apos;Q3&apos;, 
    5,&apos;Q3&apos;, 
    6,&apos;Q4&apos;, 
    7,&apos;Q4&apos;, 
    8,&apos;Q4&apos;,  

    NULL
)</formula>
        <label>Expected Contract Sign Date Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Export_Transfer_of_Products_Software__c</fullName>
        <inlineHelpText>Does the project involve the export or transfer of AFS, Accenture or Third Party products or software internationally, including intra-company exports (e.g., Accenture US to Accenture UK).</inlineHelpText>
        <label>Export/Transfer of Products/Software</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am not sure, please contact me</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extended_From_Opp_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If Opportunity Type is an Extension or Option, this field is required. Please indicate the opportunity that the work is being extended from.
You must first specify an Account Name value to display options in this lookup field.</inlineHelpText>
        <label>Extended From</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities (Extended From (Opp ID))</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Notes__c</fullName>
        <inlineHelpText>Used to document key information about the opportunity financials.</inlineHelpText>
        <label>Financial Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_On_Revenue__c</fullName>
        <inlineHelpText>Indicate the additional value beyond TCR (base period) to which AFS is committed (e.g., options). Follow-on Revenue should be retained in the base period record when option records are created.</inlineHelpText>
        <label>Follow On Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Generate_User_Email__c</fullName>
        <label>Generate User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Global_CAL__c</fullName>
        <formula>Account.Parent.P_Global_Client_Account_Lead__r.FirstName &amp;&quot; &quot;&amp; Account.Parent.P_Global_Client_Account_Lead__r.LastName</formula>
        <label>Global Client Account Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Level__c</fullName>
        <description>Standalone (or Full &amp; Open): Procurement issued as a standalone contract; opportunities that are not a Contract Vehicle or Task Order under a Contract Vehicle should be classified as Standalone. 

Contract Vehicle: Procurement is an IDIQ or BPA vehicle that AFS is pursuing as a new award. 
 
Task Order: Procurement is a Task Order issued on an existing Contract Vehicle.</description>
        <inlineHelpText>Standalone: Indicates if a procurement is full and open

Contract Vehicle: IDIQ/BPA

Task Order: Opportunity under an existing contract vehicle</inlineHelpText>
        <label>Hierarchy Level</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Task Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standalone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>If_Travel_Is_Billable_Explain__c</fullName>
        <inlineHelpText>If non-billable/unallowable costs as a percentage of total revenue exceed .5%, please explain.</inlineHelpText>
        <label>Explain NB/UA Costs &gt; .5% of TCR</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>